--- a/Details.html
+++ b/Details.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-image: url('details.github.io/Background.jpg'); 
+            background-image: url('Background.jpg'); 
             background-size: 35%; /* Adjust to zoom in or out */
             background-position: center; 
             background-repeat: no-repeat; 
