--- a/Details.html
+++ b/Details.html
@@ -7,8 +7,8 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-image: url('image/Background.jpg'); 
-            background-size: 35%; /* Adjust to zoom in or out */
+            background-image: url('images/Background.JPG'); 
+            background-size: cover; /* Ensures the background covers the screen */
             background-position: center; 
             background-repeat: no-repeat; 
             background-attachment: fixed; 
@@ -23,21 +23,23 @@
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0,0,0,0.5);
-            margin: 160px auto; /* Adjusted margin to position section lower */
+            margin: 10vh auto; /* Center vertically and horizontally */
+            box-sizing: border-box; /* Includes padding in the element’s total width and height */
         }
         h1 {
             color: #fff;
             text-align: center;
+            font-size: 1.5em; /* Adjust heading size for mobile */
         }
         .links {
             margin-top: 20px;
             display: flex;
             flex-direction: column;
-            align-items: flex-start;
+            align-items: stretch; /* Aligns items to fill container */
         }
         .links a {
             display: block;
-            padding: 10px;
+            padding: 12px 10px; /* Slightly increase padding for touch targets */
             margin-bottom: 10px;
             background-color: rgba(0, 123, 255, 0.1); /* Completely transparent background */
             color: #fff;
@@ -46,16 +48,26 @@
             text-align: left;
             width: 100%;
             border: 1px solid rgba(0, 123, 255, 0.5); /* Optional: border with some color for visibility */
+            transition: background-color 0.3s; /* Smooth transition for hover effects */
         }
         .links a:hover {
             background-color: rgba(0, 123, 255, 0); /* Keep the hover state fully transparent */
         }
         @media (max-width: 600px) {
+            body {
+                padding: 10px; /* Reduce padding for smaller screens */
+                background-size: auto; /* Adjust background size for mobile screens */
+            }
             .container {
-                padding: 15px;
+                padding: 15px; /* Smaller padding for mobile */
+                margin: 20px auto; /* Adjust margin for mobile */
+                max-width: 100%; /* Allow container to stretch full width on mobile */
             }
             .links a {
-                padding: 8px;
+                padding: 10px; /* Adjust padding to make links easier to tap */
+            }
+            h1 {
+                font-size: 1.2em; /* Further reduce font size for smaller screens */
             }
         }
     </style>
